k8s_raw/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-dynamodb-eks
  namespace: django-dynamodb-eks 
  annotations:
    # Ingress Core Settings  
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:963897741994:certificate/00518ad0-19d3-42e4-834f-fec5317c84e1
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    external-dns.alpha.kubernetes.io/hostname: your domain
spec:
  rules:
    - host: your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service: 
                name: ssl-redirect
                port: 
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: django-dynamodb-eks
                port: 
                  number: 80
